# Vulk

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  format.sh  requirements.txt
.github/workflows/: build.yml
cmake/: Doxygen.cmake  conan.cmake  flags.cmake  functions.cmake  options.cmake  warnings.cmake
docs/html/: _class_utils_8hpp.html  _class_utils_8hpp_source.html  _context_g_l_f_w_8hpp.html  _context_g_l_f_w_8hpp_source.html  _context_vulkan_8hpp.html  _context_vulkan_8hpp_source.html  _exceptions_8hpp.html  _exceptions_8hpp_source.html  _frame_manager_8hpp.html  _frame_manager_8hpp_source.html  _keyboard_8hpp.html  _keyboard_8hpp_source.html  _mat3_8hpp.html  _mat3_8hpp_source.html  _mouse_8hpp.html  _mouse_8hpp_source.html  _objects_8hpp.html  _objects_8hpp_source.html  _rect_8hpp.html  _rect_8hpp_source.html  _scoped_profiler_8hpp.html  _scoped_profiler_8hpp_source.html  _shader_8hpp.html  _shader_8hpp_source.html  _time_8hpp.html  _time_8hpp_source.html  _utils_8hpp.html  _utils_8hpp_source.html  _vec2_8hpp.html  _vec2_8hpp_source.html  _vec3_8hpp.html  _vec3_8hpp_source.html  _window_8hpp.html  _window_8hpp_source.html  annotated.html  class_type_checker.html  classes.html  classvulk_1_1_context_g_l_f_w-members.html  classvulk_1_1_context_g_l_f_w.html  classvulk_1_1_context_vulkan-members.html  (+54 more)
documentation/: Doxyfile.in
documentation/html/: _class_utils_8hpp.html  _class_utils_8hpp_source.html  _color_8cpp.html  _color_8hpp.html  _color_8hpp_source.html  _context_g_l_f_w_8cpp.html  _context_g_l_f_w_8hpp.html  _context_g_l_f_w_8hpp_source.html  _context_vulkan_8cpp.html  _context_vulkan_8hpp.html  _context_vulkan_8hpp_source.html  _exceptions_8cpp.html  _exceptions_8hpp.html  _exceptions_8hpp_source.html  _frame_manager_8cpp.html  _frame_manager_8hpp.html  _frame_manager_8hpp_source.html  _keyboard_8cpp.html  _keyboard_8hpp.html  _keyboard_8hpp_source.html  _mat3_8hpp.html  _mat3_8hpp_source.html  _mouse_8cpp.html  _mouse_8hpp.html  _mouse_8hpp_source.html  _objects_8cpp.html  _objects_8hpp.html  _objects_8hpp_source.html  _rect_8hpp.html  _rect_8hpp_source.html  _scoped_profiler_8cpp.html  _scoped_profiler_8hpp.html  _scoped_profiler_8hpp_source.html  _shader_8cpp.html  _shader_8hpp.html  _shader_8hpp_source.html  _time_8hpp.html  _time_8hpp_source.html  _utils_8cpp.html  _utils_8hpp.html  (+72 more)
example-app/: CMakeLists.txt
example-app/include/: Main.hpp
example-app/src/: Main.cpp
lib/: CMakeLists.txt
lib/include/SFVL/: Error.hpp  FrameManager.hpp  Mat3.hpp  Rect.hpp  ScopedProfiler.hpp  Shader.hpp  Utils.hpp  Vec3.hpp  Window.hpp
lib/include/SFVL/Contexts/: ContextGLFW.hpp  ContextVulkan.hpp
lib/include/Vulk/: ClassUtils.hpp  Color.hpp  Error.hpp  Exceptions.hpp  FrameManager.hpp  Keyboard.hpp  Macros.hpp  Mat3.hpp  Mouse.hpp  Objects.hpp  Rect.hpp  ScopedProfiler.hpp  Shader.hpp  Time.hpp  Utils.hpp  Vec2.hpp  Vec3.hpp  Vertex.hpp  Window.hpp
lib/include/Vulk/Contexts/: ContextGLFW.hpp  ContextVulkan.hpp
lib/include/Vulk/Graphics/: ADrawable.hpp  AShape.hpp  Circle.hpp  Drawable.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
lib/shaders/: shader.vert
lib/src/: Color.cpp  Error.cpp  Exceptions.cpp  FrameManager.cpp  Keyboard.cpp  Mouse.cpp  Objects.cpp  ScopedProfiler.cpp  Shader.cpp  Utils.cpp  Vertex.cpp  Window.cpp
lib/src/Contexts/: ContextGLFW.cpp  ContextVulkan.cpp
lib/src/Graphics/: ADrawable.cpp  AShape.cpp  Circle.cpp  Drawable.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp
tests/: CMakeLists.txt
tests/src/: Color.cpp  Mat3.cpp  Rect.cpp  Run.cpp  Vec2.cpp  Vec3.cpp
